# MetaScreener

./: .env.example  .gitignore  .zenodo.json  API_OPTIMIZATION_ENHANCEMENT_REPORT.md  CITATION.cff  CLAUDE.md  CLOUD_DEPLOYMENT_GUIDE.md  DEEPSEEK_R1_TIMEOUT_FIX_REPORT.md  DEPLOYMENT.md  LICENSE  Makefile  NETWORK_ERROR_DIAGNOSIS.md  PROJECT_STRUCTURE.md  QUALITY_ASSESSMENT_FIX.md  QUALITY_ASSESSMENT_FIX_SUMMARY.md  README.md  SCREENING_OPTIMIZATION_REPORT.md  ULTIMATE_FIX_ANALYSIS.md  UNUSED  app.py  celery_app.py  config.py  debug_assessment_status.py  debug_quality_assessment.py  debug_redis_assessment.py  deepseek_r1_emergency_fix_report.md  env.example  final_compliance_report.md  find_orphaned_batches.py  fix_quality_assessment.py  gunicorn_config.py  migrate_batch_data.py  optimization_summary_chinese.md  pyproject.toml  rate_limiter.py  redis.conf.example  requirements.txt  run.py  start_production.sh  supplier_compliance_verification.md  (+3 more)
.cursor/rules/: language.mdc
.github/workflows/: ci.yml  release.yml
app/celery_tasks/: __init__.py  celery_app.py  tasks.py
app/core/: app.py  app.py.backup.20250525_173722
app/quality_assessment_module/: redis_storage.py  routes.py  services.py
app/templates/: abstract_screening.html  base.html  batch_pdf_results.html  data_extraction.html  extraction_result.html  full_text_screening.html  index.html  llm_configuration.html  metrics_results.html  results.html  screening_actions.html  screening_criteria.html  test_results.html
app/utils/: __init__.py  enhanced_api_optimizer.py  optimized_api_integration.py  rate_limiter.py  utils.py  utils.py.backup.20250525_173722
config/: __init__.py  celery_config.py  config.py  config.py.backup.20250525_173722
configs/: models.yaml
demo/: criteria.txt  run_demo.sh  test_papers.ris
deployment/: apply_performance_optimizations.sh  backup_sessions.sh  diagnose_pdf_issues.py  fix_pdf_screening.sh  gunicorn_config.py  performance_optimization.md  start_production.sh  xf_batch_pdf_sessions.py
docker/: .dockerignore  Dockerfile
docs/: SYSTEM_ARCHITECTURE.md
docs/plans/: 2026-02-26-react-frontend-design.md  2026-02-26-react-frontend-plan.md
experiments/: TRIPOD_AI_checklist.md  explore_synergy.py  synergy_overview.csv
experiments/adjudication/: a13d_fn_audit_elements.csv  a13d_fn_audit_elements_filled.csv  a13d_labeling_template.csv  a13d_labeling_template_filled.csv  a13d_model_outputs.csv  a13d_sample_for_labeling.csv  a13d_training_set.csv
experiments/configs/: a0.yaml  a1.yaml  a10_fixed_margin.yaml  a11_hr_plus3.yaml  a11_rule_exclude.yaml  a13a_complementary_wave2.yaml  a13b_coverage_rule.yaml  a13c_combined.yaml  a14a_difficulty_floor_060.yaml  a14b_difficulty_floor_080.yaml  a14c_difficulty_floor_100.yaml  a15a_ec_override.yaml  a15b_low_hr_cost.yaml  a15c_wave2_margin.yaml  a2.yaml  a3.yaml  a4.yaml  a5.yaml  a6.yaml  a7.yaml  a8.yaml  a9.yaml  a9_high_recall.yaml  a9_high_throughput.yaml  a9_no_sprt.yaml  solo_deepseek-v3.yaml  solo_kimi-k2.yaml  solo_llama4-maverick.yaml  solo_qwen3.yaml
experiments/criteria/: Appenzeller-Herzog_2019_criteria.json  Appenzeller-Herzog_2019_criteria_v2.json  Bos_2018_criteria_v2.json  Brouwer_2019_criteria_v2.json  CLEF_CD000996_criteria_v2.json  CLEF_CD001261_criteria_v2.json  CLEF_CD004414_criteria_v2.json  CLEF_CD006468_criteria_v2.json  CLEF_CD007867_criteria_v2.json  CLEF_CD009069_criteria_v2.json  CLEF_CD009642_criteria_v2.json  CLEF_CD010038_criteria_v2.json  CLEF_CD010239_criteria_v2.json  CLEF_CD010558_criteria_v2.json  CLEF_CD010753_criteria_v2.json  CLEF_CD011140_criteria_v2.json  (+54 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
paper/: asreview_comparison_preregistration.md  binary_frontier_results.md  config_naming_map.yaml  fp_audit_external_v2_adjudicator_instructions.md  fp_audit_external_v2_protocol.md  independent_signals_ablation_preregistration.md  independent_signals_phase1_results.md  ms_active_risk_preregistration.md  ms_rank_v3_preregistration.md  ms_rank_v3_results.md  ms_rank_v4_exploratory_plan.md  ms_rank_v4_exploratory_results.md  ms_route_hybrid_exploratory_plan.md  ms_route_hybrid_exploratory_results.md  v2_lexical_veto_final_report.md
quality_assessment/: PROMPT_ENHANCEMENT_SUMMARY.md  ROOT_CAUSE_FIX_SUMMARY.md  __init__.py  create_demo_assessment.py  debug_data.py  fix_assessment_display.py  redis_storage.py  routes.py  services.py
screen_webapp/: __init__.py  tasks.py
scripts/: build_desktop.py  notarize_macos_desktop.py  recompute_ms_active_config_hashes.py  run_all_validations.sh  setup_env.sh  sign_macos_desktop.py
static/: error.html
templates/: abstract_screening.html  base.html  batch_pdf_results.html  check_local_storage.html  data_extraction.html  full_text_screening.html  index.html  llm_configuration.html  metrics_from_local.html  metrics_results.html  pdf_result.html  results.html  screening_actions.html  screening_criteria.html  test_results.html
tests/: conftest.py
validation/: __init__.py  common.py
(+1159 files in other folders)
