[project]
name = "metascreener"
version = "2.0.0a1"
description = "Open-source multi-LLM ensemble tool for systematic review workflows"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.50",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "streamlit>=1.40",
    "plotly>=5.0",
    "pymupdf>=1.24",
    "rispy>=0.8",
    "bibtexparser>=2.0.0b9",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "structlog>=24.0",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "rich>=13.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "types-PyYAML>=6.0",
]
gpu = ["vllm>=0.6"]
viz = ["matplotlib>=3.9", "seaborn>=0.13"]

[project.scripts]
metascreener = "metascreener.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metascreener"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "PT"]

[tool.ruff.lint.per-file-ignores]
# Streamlit pages use numeric prefixes for ordering (e.g., 00_criteria.py)
"src/metascreener/app/pages/*" = ["N999"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


[[tool.mypy.overrides]]
module = ["plotly", "plotly.*", "pandas", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/metascreener"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.uv]
prerelease = "if-necessary-or-explicit"
