[project]
name = "metascreener"
version = "2.0.0a3"
description = "Open-source multi-LLM ensemble tool for systematic review workflows"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    {name = "Chaokun Hong"},
]
keywords = [
    "systematic-review", "screening", "llm",
    "meta-analysis", "evidence-synthesis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.50",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "streamlit>=1.40",
    "plotly>=5.0",
    "pymupdf>=1.24",
    "rispy>=0.8",
    "bibtexparser>=2.0.0b9",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "structlog>=24.0",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "rich>=13.0",
    "openpyxl>=3.1",
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "types-PyYAML>=6.0",
]
gpu = ["vllm>=0.6"]
viz = ["matplotlib>=3.9", "seaborn>=0.13", "kaleido>=0.2"]

[project.scripts]
metascreener = "metascreener.cli:app"

[project.urls]
Homepage = "https://github.com/ChaokunHong/MetaScreener"
Documentation = "https://github.com/ChaokunHong/MetaScreener#readme"
Repository = "https://github.com/ChaokunHong/MetaScreener"
Issues = "https://github.com/ChaokunHong/MetaScreener/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metascreener"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "PT"]

[tool.ruff.lint.per-file-ignores]
# Streamlit pages use numeric prefixes for ordering (e.g., 00_criteria.py)
"src/metascreener/app/pages/*" = ["N999"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


[[tool.mypy.overrides]]
module = ["plotly", "plotly.*", "pandas", "pandas.*", "kaleido"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["uvicorn", "uvicorn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/metascreener"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.uv]
prerelease = "if-necessary-or-explicit"
